--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
   cursor:none;
 }
 
-/* 로그인 화면 */
+/* 로그인 */
 #loginScreen{
   position:fixed;
   width:100%;
@@ -37,6 +37,7 @@ body{
 }
 
 #loginBox h2{ color:#0ff; }
+
 #loginBox input{
   display:block;
   width:220px;
@@ -46,6 +47,7 @@ body{
   border-radius:8px;
   text-align:center;
 }
+
 #loginBox button{
   width:100%;
   padding:10px;
@@ -54,15 +56,60 @@ body{
   font-weight:bold;
   cursor:pointer;
 }
+
 #loginMsg{ color:red; }
 
-/* canvas */
-canvas{
+/* UI */
+#ui{
   position:fixed;
-  top:0;
-  left:0;
-  z-index:0;
-  pointer-events:none; /* 🔥 클릭 방해 해결 */
+  top:20px;
+  left:50%;
+  transform:translateX(-50%);
+  z-index:1000;
+  display:none;
+}
+
+.menu{
+  display:flex;
+  gap:25px;
+}
+
+.menu a{
+  padding:10px 20px;
+  background:rgba(0,255,255,0.1);
+  border:1px solid cyan;
+  border-radius:10px;
+  color:white;
+  text-decoration:none;
+  font-weight:bold;
+  transition:.3s;
+  cursor:pointer;
+}
+
+.menu a:hover{
+  background:cyan;
+  color:black;
+  box-shadow:0 0 20px cyan;
+}
+
+/* 페이지 */
+.page{
+  position:fixed;
+  top:150px;
+  width:100%;
+  text-align:center;
+  font-size:30px;
+  color:white;
+  opacity:0;
+  transform:scale(.8);
+  transition:.5s;
+  z-index:1000;
+}
+
+.page.active{
+  opacity:1;
+  transform:scale(1);
+  text-shadow:0 0 20px cyan;
 }
 
 /* 네온 커서 */
@@ -75,66 +122,7 @@ canvas{
   box-shadow:0 0 30px cyan;
   pointer-events:none;
   transform:translate(-50%,-50%);
-  z-index:100;
-}
-
-/* UI */
-#ui{
-  position:fixed;
-  top:20px;
-  left:50%;
-  transform:translateX(-50%);
-  z-index:10;
-  display:none;
-  flex-direction:column;
-  align-items:center;
-  gap:20px;
-}
-
-.menu{
-  display:flex;
-  gap:25px;
-}
-.menu a{
-  padding:10px 20px;
-  background:rgba(0,255,255,0.1);
-  border:1px solid cyan;
-  border-radius:10px;
-  color:white;
-  text-decoration:none;
-  font-weight:bold;
-  transition:.3s;
-}
-.menu a:hover{
-  background:cyan;
-  color:black;
-  box-shadow:0 0 20px cyan;
-}
-
-/* 페이지 */
-.page{
-  position:fixed;
-  top:120px;
-  width:100%;
-  text-align:center;
-  color:white;
-  display:none;
-  animation:fade .5s ease;
-}
-@keyframes fade{
-  from{opacity:0; transform:translateY(20px);}
-  to{opacity:1; transform:translateY(0);}
-}
-
-#title{
-  position:fixed;
-  bottom:40px;
-  width:100%;
-  text-align:center;
-  font-size:40px;
-  color:#00fff7;
-  text-shadow:0 0 20px #0ff;
-  z-index:10;
+  z-index:2000;
 }
 </style>
 </head>
@@ -152,7 +140,7 @@ canvas{
   </div>
 </div>
 
-<!-- UI -->
+<!-- 메뉴 -->
 <div id="ui">
   <div class="menu">
     <a onclick="openPage('game')">🎮 게임</a>
@@ -163,48 +151,59 @@ canvas{
   </div>
 </div>
 
-<!-- 페이지 내용 -->
-<div id="game" class="page"><h2>🎮 GAME PAGE</h2></div>
-<div id="portfolio" class="page"><h2>💼 PORTFOLIO PAGE</h2></div>
-<div id="guest" class="page"><h2>📝 GUESTBOOK PAGE</h2></div>
-<div id="about" class="page"><h2>🙋‍♂️ ABOUT ME PAGE</h2></div>
-<div id="contact" class="page"><h2>📚 CONTACT PAGE</h2></div>
+<!-- 페이지 -->
+<div id="game" class="page">🎮 GAME PAGE</div>
+<div id="portfolio" class="page">💼 PORTFOLIO PAGE</div>
+<div id="guest" class="page">📝 GUESTBOOK PAGE</div>
+<div id="about" class="page">🙋‍♂️ ABOUT ME PAGE</div>
+<div id="contact" class="page">📚 CONTACT PAGE</div>
 
-<h1 id="title">🚀 CYBER COSMIC OVERDRIVE 🚀</h1>
 <div id="cursor"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 <script>
-/* 로그인 */
+/* 로그인 정보 */
 const correctId="rkdgus0912";
 const correctPw="6664";
 
+/* 로그인 */
 function doLogin(){
   const id=document.getElementById("username").value;
   const pw=document.getElementById("password").value;
   const msg=document.getElementById("loginMsg");
 
   if(id===correctId && pw===correctPw){
-    document.getElementById("loginScreen").style.display="none";
-    document.getElementById("ui").style.display="flex";
-  } else{
+    document.getElementById("loginScreen").style.opacity="0";
+    setTimeout(()=>{
+      document.getElementById("loginScreen").style.display="none";
+      document.getElementById("ui").style.display="block";
+    },800);
+  }else{
     msg.textContent="❌ 아이디 또는 비밀번호가 틀렸습니다.";
   }
 }
 
 /* 페이지 전환 */
-function openPage(pageId){
-  document.querySelectorAll(".page").forEach(p=>p.style.display="none");
-  document.getElementById(pageId).style.display="block";
+function openPage(id){
+  document.querySelectorAll(".page").forEach(p=>p.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
 }
 
-/* 우주 배경 */
+/* Three.js */
 let scene=new THREE.Scene();
 let camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,4000);
 let renderer=new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
+
+/* 🔥 클릭 방해 완전 차단 */
+renderer.domElement.style.pointerEvents="none";
+renderer.domElement.style.position="fixed";
+renderer.domElement.style.top="0";
+renderer.domElement.style.left="0";
+renderer.domElement.style.zIndex="0";
+
 camera.position.z=300;
 
 let geo=new THREE.BufferGeometry();
@@ -229,7 +228,6 @@ function animate(){
 animate();
 
 /* 네온 커서 */
-const cursor=document.getElementById('cursor');
 document.addEventListener('mousemove',e=>{
   cursor.style.left=e.clientX+"px";
   cursor.style.top=e.clientY+"px";
