--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@ body{
   cursor:none;
 }
 
+/* 🔥 배경 전용 레이어 */
+#bg{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:0;
+  pointer-events:none;
+}
+
 /* 로그인 */
 #loginScreen{
   position:fixed;
@@ -65,7 +76,7 @@ body{
   top:20px;
   left:50%;
   transform:translateX(-50%);
-  z-index:1000;
+  z-index:2000;
   display:none;
 }
 
@@ -103,7 +114,7 @@ body{
   opacity:0;
   transform:scale(.8);
   transition:.5s;
-  z-index:1000;
+  z-index:2000;
 }
 
 .page.active{
@@ -122,12 +133,14 @@ body{
   box-shadow:0 0 30px cyan;
   pointer-events:none;
   transform:translate(-50%,-50%);
-  z-index:2000;
+  z-index:3000;
 }
 </style>
 </head>
 
 <body>
+
+<div id="bg"></div>
 
 <!-- 로그인 -->
 <div id="loginScreen">
@@ -190,19 +203,13 @@ function openPage(id){
   document.getElementById(id).classList.add("active");
 }
 
-/* Three.js */
+/* Three.js 배경 */
 let scene=new THREE.Scene();
 let camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,4000);
 let renderer=new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(innerWidth,innerHeight);
-document.body.appendChild(renderer.domElement);
 
-/* 🔥 클릭 방해 완전 차단 */
-renderer.domElement.style.pointerEvents="none";
-renderer.domElement.style.position="fixed";
-renderer.domElement.style.top="0";
-renderer.domElement.style.left="0";
-renderer.domElement.style.zIndex="0";
+document.getElementById("bg").appendChild(renderer.domElement);
 
 camera.position.z=300;
 
@@ -228,6 +235,7 @@ function animate(){
 animate();
 
 /* 네온 커서 */
+const cursor=document.getElementById("cursor");
 document.addEventListener('mousemove',e=>{
   cursor.style.left=e.clientX+"px";
   cursor.style.top=e.clientY+"px";
